--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^1.0.2",
     "@icon-park/vue-next": "^1.4.2",
+    "axios": "^1.4.0",
     "electron-updater": "^5.3.0",
+    "element-plus": "^2.3.7",
     "node-fetch": "2",
+    "pinia": "^2.1.4",
     "sass": "^1.63.6",
     "vue-router": "4"
   },
