--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "axios": "^1.4.0",
     "electron-updater": "^5.3.0",
     "element-plus": "^2.3.7",
-    "node-fetch": "2",
+    "node-fetch": "^2.6.12",
     "pinia": "^2.1.4",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "sass": "^1.63.6",
     "vue-router": "4"
   },
