--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wallpaper",
+  "name": "yy-wallpaper",
   "version": "1.0.0",
-  "description": "An Electron application with Vue and TypeScript",
+  "description": "杨杨桌面壁纸软件",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://www.electronjs.org",
